--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,7 +23,7 @@
             <a class="nav-link" routerLink="login" *ngIf="this.service.token == null">Sign in</a>
           </li>
           <li class="nav-item" *ngIf="this.service.token  != null">
-            <a class="nav-link" routerLink="profile"  (click)="getUser()">{{ this.service.user }}</a>
+            <a class="nav-link"   (click)="getUser()">{{ this.service.user }}</a>
           </li>
         </ul>
       </div>
