--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -21,11 +21,19 @@
             Unfollow {{ this.service.articleDetail.article.author.username }} <span class="counter"></span>
           </button>
           &nbsp;&nbsp;
-          <button class="btn btn-sm btn-outline-primary" *ngIf="this.service.articleDetail.article.author.username != this.service.user"
+          <button class="btn btn-sm btn-outline-primary" 
+          *ngIf="this.service.articleDetail.article.author.username != this.service.user && this.service.articleDetail.article.favorited == false"
           (click)="addToFavorite(this.service.articleDetail.article)">
             <i class="ion-heart"></i>
             &nbsp;
             Favorite Post <span class="counter"></span>
+          </button>
+          <button class="btn btn-sm btn-outline-primary" 
+          *ngIf="this.service.articleDetail.article.author.username != this.service.user && this.service.articleDetail.article.favorited == true"
+          (click)="removeFromFavorite(this.service.articleDetail.article)">
+            <i class="ion-heart"></i>
+            &nbsp;
+            Unfavorite Post <span class="counter"></span>
           </button>
           <button class="btn btn-sm btn-outline-primary" 
           *ngIf="this.service.articleDetail.article.author.username == this.service.user" (click)="navigateToForm(this.service.articleDetail.article.slug)">
@@ -74,25 +82,31 @@
           </button>
 
           &nbsp;
-          <button class="btn btn-sm btn-outline-primary" *ngIf="this.service.articleDetail.article.author.username != this.service.user"
+          <button class="btn btn-sm btn-outline-primary" 
+          *ngIf="this.service.articleDetail.article.author.username != this.service.user && this.service.articleDetail.article.favorited == false"
           (click)="addToFavorite(this.service.articleDetail.article)">
             <i class="ion-heart"></i>
             &nbsp;
             Favorite Post <span class="counter"></span>
           </button>
+
+          <button class="btn btn-sm btn-outline-primary" 
+          *ngIf="this.service.articleDetail.article.author.username != this.service.user && this.service.articleDetail.article.favorited == true"
+          (click)="removeFromFavorite(this.service.articleDetail.article)">
+            <i class="ion-heart"></i>
+            &nbsp;
+            Unfavorite Post <span class="counter"></span>
+          </button>
         </div>
       </div>
   
-      <div class="row">
-  
-        <div class="col-xs-12 col-md-8 offset-md-2">
-  
+      <div class="row">  
+        <div class="col-xs-12 col-md-8 offset-md-2">  
           <form class="card comment-form" [formGroup]="f">
             <div class="card-block">
               <textarea class="form-control" placeholder="Write a comment..." rows="3" formControlName="comment"></textarea>
             </div>
-            <div class="card-footer">
-              
+            <div class="card-footer">             
               <button class="btn btn-sm btn-primary" (click)="createComment(this.service.articleDetail.article.slug)">
                Post Comment
               </button>
@@ -116,11 +130,8 @@
               </div>
             </div>
           </div>
-        </div>
-  
-      </div>
-  
-    </div>
-  
+        </div>  
+      </div>  
+    </div> 
   </div>
   
