--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
   
         <div class="col-md-6 offset-md-3 col-xs-12">
           <h1 class="text-xs-center">Sign In</h1>
-          <p class="text-xs-center">
+          <p class="text-xs-center text-success">
             <a (click)="navigateToRegister()">Need an account?</a>
           </p>
   
@@ -15,6 +15,7 @@
             <fieldset class="form-group">
               <input class="form-control form-control-lg" type="password" placeholder="Password" formControlName="password">
             </fieldset>
+            <li class="ng-binding ng-scope text-danger" *ngIf="this.err != null">email or password {{ this.err.error.errors['email or password'][0]  }}</li>
             <button class="btn btn-lg btn-primary pull-xs-right" (click)="logIn()">
               Sign in
             </button>
