--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -4,19 +4,28 @@
   
         <div class="col-md-6 offset-md-3 col-xs-12">
           <h1 class="text-xs-center">Sign up</h1>
-          <p class="text-xs-center">
+          <p class="text-xs-center text-success">
             <a (click)="navigateToLogin()">Have an account?</a>
           </p>
   
           <form [formGroup]="f">
             <fieldset class="form-group">
               <input class="form-control form-control-lg" type="text" placeholder="Your Name" formControlName="name">
+              <div *ngIf="this.err != null">
+                <li class="ng-binding ng-scope text-danger" *ngFor ="let error of this.err.error.errors.username"> username  {{ error }}</li>
+              </div>
             </fieldset>
             <fieldset class="form-group">
               <input class="form-control form-control-lg" type="text" placeholder="Email" formControlName="email">
+              <div *ngIf="this.err != null">
+                <li class="ng-binding ng-scope text-danger" *ngFor ="let error of this.err.error.errors.email"> email  {{ error }}</li>
+              </div>
             </fieldset>
             <fieldset class="form-group">
               <input class="form-control form-control-lg" type="password" placeholder="Password" formControlName="password">
+              <div *ngIf="this.err != null">
+                <li class="ng-binding ng-scope text-danger" *ngFor ="let error of this.err.error.errors.password"> password  {{ error }}</li>
+              </div>
             </fieldset>
             <button class="btn btn-lg btn-primary pull-xs-right" (click)="submit()">
               Sign up
